--- a/GetRide/frontend/src/locales/mk.json
+++ b/GetRide/frontend/src/locales/mk.json
@@ -196,6 +196,8 @@
 
   "homePageForm": "+ Објави Возење",
   "postRideFormAlert": "Возењето е успешно објавено!",
+  "postRidePlaceOne": "Почетна локација",
+  "postRidePlaceTwo": "Внесете локација",
   "postRideFormTitle": "Објави Возење",
   "postRideFormOne": "Место на тргнување:",
   "postRideFormTwo": "Каде може да ги собереш патниците:",
