--- a/GetRide/frontend/src/locales/sq.json
+++ b/GetRide/frontend/src/locales/sq.json
@@ -196,6 +196,8 @@
 
   "homePageForm": "+ Postoni një udhëtim",
   "postRideFormAlert": "Udhëtimi u postua me sukses!",
+  "postRidePlaceOne": "Vendndodhja e fillimit",
+  "postRidePlaceTwo": "Shkruani një vendndodhje",
   "postRideFormTitle": "Posto një Udhëtim",
   "postRideFormOne": "Vendndodhja e nisjes:",
   "postRideFormTwo": "Ku mund të marrësh pasagjerët:",
